--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -23,6 +23,7 @@ table {border-collapse: collapse;}
 .fa.fa-th {color: deepskyblue; margin-right: 0.5rem;}
 .fa.fa-list {color: darkgoldenrod; margin-right: 0.5rem;}
 .fa.fa-expand-arrows-alt {color: darkgoldenrod;}
+.fa.fa-expand {color: mediumvioletred;}
 .fas.fa-arrow-alt-circle-down {color: mediumvioletred;}
 .fas.fa-arrow-alt-circle-up {color: lightseagreen;}
 
